<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.skybase.mealtracker.database.entities.MealType" />

        <variable
            name="meal"
            type="com.skybase.mealtracker.ui.viewmodel.MealAddFragmentViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@color/primaryLightColor"
                android:id="@+id/iv_meal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:imageUrl="@{meal.currentMeal.meal_image}"
                android:scaleType="centerInside"
                android:src="@drawable/ic_meal_placeholder"
                app:layout_constraintBottom_toBottomOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/tv_capture"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:padding="@dimen/padding4"
                android:src="@drawable/ic_capture"
                app:layout_constraintBottom_toBottomOf="@id/iv_meal"
                app:layout_constraintEnd_toEndOf="@id/iv_meal"
                app:layout_constraintHorizontal_bias="0.10"
                app:layout_constraintStart_toStartOf="@id/iv_meal"
                app:layout_constraintTop_toTopOf="@id/iv_meal"
                app:layout_constraintVertical_bias="0.90" />

            <LinearLayout
                android:id="@+id/layout_meal_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/btn_save"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/guideline1">

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@{MealType.BREAKFAST.name()}"
                            app:checkedIconEnabled="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@{MealType.LUNCH.name()}"
                            app:checkedIconEnabled="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@{MealType.LIGHT_SNACKS.name()}"
                            app:checkedIconEnabled="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@{MealType.DINNER.name()}"
                            app:checkedIconEnabled="true" />

                    </com.google.android.material.chip.ChipGroup>

                </com.google.android.flexbox.FlexboxLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:hint="@string/meal_name_label"
                    app:startIconDrawable="@drawable/ic_pizza">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={meal.currentMeal.meal_name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:hint="@string/meal_info_label"
                    app:startIconDrawable="@drawable/ic_mix">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:minLines="2"
                        android:text="@={meal.currentMeal.meal_info}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:hint="@string/meal_time_label"
                    app:startIconDrawable="@drawable/ic_clock_bw">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/layout_meal_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:text="@{meal.currentMeal.getMealTimeOnly}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:hint="@string/meal_restaurant_label"
                    app:startIconDrawable="@drawable/ic_restaurant">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={meal.currentMeal.meal_restaurant}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:hint="@string/meal_location_label"
                    app:startIconDrawable="@drawable/ic_location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/layout_meal_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:text="@{meal.currentMeal.meal_location.toString()}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:onClick="@{()->meal.saveMealData()}"
                android:text="@string/save_meal"
                android:theme="@style/Widget.MaterialComponents.Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/layout_meal_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>